kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromq
  labels: 
    app: vpromq
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: vpromq
  template:
    metadata:
      labels:
        app: vpromq
    spec:
      containers:
      - name: vpromq
        image:  rabbitmq
        ports:
        - containerPort: 5672
          name: vpromq-port
