kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  labels:
    app: vprodmcsvc 
spec:
  selector:
    app: vpromc
  ports:
  - port: 11211
    targetPort: vpromc-port
    protocol: TCP

  type: ClusterIP
